# TSTGiftAlert

./: .env.example  .gitignore  Dockerfile.prod  README.md  docker-compose.prod.yaml  pyproject.toml
gift_alerter/: config.py  main.py
gift_alerter/logger/: logger.py
gift_alerter/repositories/: db.py
gift_alerter/repositories/gifts/: repository.py
gift_alerter/repositories/telegram/: repository.py
gift_alerter/services/alerter/: service.py
gift_alerter/services/gifts/: service.py
migrations/: 0001_create_gifts_table.py  0002_updated_at_trigger.py
scripts/: migrate.sh  start-prod.sh
